[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0.82"
cgmath = "0.18.0"
rand = "0.9.0-alpha.1"
tobj = { version = "4.0.2", features = [
    "async",
] }
instant = "0.1.12"

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]